--- a/app/src/main/res/layout/startscreen.xml
+++ b/app/src/main/res/layout/startscreen.xml
@@ -1,17 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="220dp"
+        android:layout_height="190dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="39dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/ic_logo" />
+
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:met_floatingLabel="highlight"
+        app:met_singleLineEllipsis="true"
+        app:met_baseColor="@color/base_color"
+        app:met_primaryColor="@color/color_main"
+        app:met_clearButton="true"
+        android:hint="Enter your e-mail"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/imageView"
+        android:id="@+id/editTextLogin"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp" />
+
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:met_floatingLabel="highlight"
+        app:met_singleLineEllipsis="true"
+        app:met_baseColor="@color/base_color"
+        app:met_primaryColor="@color/color_main"
+        app:met_clearButton="true"
+        android:id="@+id/editTextPass"
+        android:hint="Enter your password"
+        android:layout_below="@+id/editTextLogin"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:inputType="textPassword"
+        android:password="true" />
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@+id/editTextPass"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create profile"
+            android:textSize="16sp"
+            android:textColor="@android:color/holo_red_dark"
+            android:id="@+id/textViewCreate"
+            android:onClick="onCreateProfile"
+            android:layout_weight="0.7"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sing in"
+            android:textSize="16sp"
+            android:textColor="@color/color_main"
+            android:id="@+id/textViewSingIn"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:onClick="onSingIn"/>
+    </TableRow>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Make learning English easier"
+        android:textColor="@color/color_hint"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
