--- a/app/src/main/res/layout/startscreen.xml
+++ b/app/src/main/res/layout/startscreen.xml
@@ -3,87 +3,101 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@android:color/white">
+    android:background="@color/color_hint"
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="190dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
-        android:background="@drawable/ic_logo" />
-
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:met_floatingLabel="highlight"
-        app:met_singleLineEllipsis="true"
-        app:met_baseColor="@color/base_color"
-        app:met_primaryColor="@color/color_main"
-        app:met_clearButton="true"
-        android:hint="Enter your e-mail"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/imageView"
-        android:id="@+id/editTextLogin"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp" />
-
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:met_floatingLabel="highlight"
-        app:met_singleLineEllipsis="true"
-        app:met_baseColor="@color/base_color"
-        app:met_primaryColor="@color/color_main"
-        app:met_clearButton="true"
-        android:id="@+id/editTextPass"
-        android:hint="Enter your password"
-        android:layout_below="@+id/editTextLogin"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:inputType="textPassword"
-        android:password="true" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/editTextPass"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create profile"
-            android:textSize="16sp"
-            android:textColor="@android:color/holo_red_dark"
-            android:id="@+id/textViewCreate"
-            android:onClick="onCreateProfile"
-            android:layout_weight="0.7"
-            android:gravity="center"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log in"
-            android:textSize="16sp"
-            android:textColor="@color/color_main"
-            android:id="@+id/textViewSingIn"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:onClick="onSingIn"/>
-    </TableRow>
+        android:layout_marginTop="50dp"
+        android:visibility="gone" />
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:gravity="center"
+        android:text="IT English District"
+        android:textColor="@color/md_white_1000"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:background="@drawable/action_create"
+        android:orientation="vertical"
+        android:layout_marginBottom="5dp">
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/editTextLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:hint="Enter your e-mail"
+            app:met_baseColor="@color/base_color"
+            app:met_clearButton="true"
+            app:met_floatingLabel="normal"
+            app:met_primaryColor="@color/color_main"
+            app:met_singleLineEllipsis="true" />
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/editTextPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter your password"
+            android:inputType="textPassword"
+            android:password="true"
+            app:met_baseColor="@color/base_color"
+            app:met_clearButton="true"
+            app:met_floatingLabel="normal"
+            app:met_primaryColor="@color/color_main"
+            app:met_singleLineEllipsis="true" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textViewSingIn"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:onClick="onSingIn"
+        android:text="Log in"
+        android:textColor="@color/md_white_1000"
+        android:textSize="16sp"
+        android:background="@drawable/action_create_log_in"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignLeft="@+id/linearLayout"
+        android:layout_alignRight="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/textViewCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Make learning English easier"
-        android:textColor="@color/color_hint"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:gravity="center"
+        android:onClick="onCreateProfile"
+        android:text="Create profile"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="16sp" />
+
+    <TextView
         android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Make learning English easier"
+        android:textColor="@color/md_white_1000" />
 
 </RelativeLayout>
