--- a/app/src/main/res/layout/startscreen.xml
+++ b/app/src/main/res/layout/startscreen.xml
@@ -68,7 +68,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sing in"
+            android:text="Log in"
             android:textSize="16sp"
             android:textColor="@color/color_main"
             android:id="@+id/textViewSingIn"
