--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="color_main">#063978</color>
     <color name="color_hint">#1761bd</color>
     <color name="base_color">#0056d3</color>
+    <color name="button_text_color">#FFFFFF</color>
+    <color name="gray_btn_bg_color">#D0D0D0</color>
+    <color name="gray_btn_bg_pressed_color">#B6B6B6</color>
+    <color name="sweet_dialog_bg_color">#FFFFFF</color>
+
 </resources>
