--- a/app/src/main/res/layout/adapter_news.xml
+++ b/app/src/main/res/layout/adapter_news.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:id="@+id/mainLin">
 
     <TableRow
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imageView3"
+            android:id="@+id/imageViewLogo"
             android:background="@drawable/imagephoto" />
 
         <TextView
@@ -22,7 +23,7 @@
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="IT English District"
-            android:id="@+id/textView2"
+            android:id="@+id/textViewTitle"
             android:gravity="bottom"
             android:textColor="@color/color_main"
             android:layout_marginLeft="10dp" />
@@ -40,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="A birthday is just another day where you go to work and people give you love. Age is just a state of mind, and you are as old as you think you are. You have to count your blessings and be happy."
-        android:id="@+id/textView3"
+        android:id="@+id/textViewContent"
         android:layout_marginLeft="60dp" />
 
     <TextView
@@ -48,14 +49,15 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Do you want come :"
-        android:id="@+id/textView4"
+        android:id="@+id/textViewQuestion"
         android:layout_marginTop="5dp"
         android:textColor="@color/color_main" />
 
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp">
+        android:layout_marginLeft="60dp"
+        android:id="@+id/radioGroup">
 
         <RadioButton
             android:layout_width="wrap_content"
@@ -83,7 +85,7 @@
             app:pageTitle="Developer's notes"
             app:pageText="This is blog about Android development."
             app:pagePicture="@drawable/ic_launcher"
-            />
+            android:id="@+id/ffbook" />
         <com.shamanland.facebook.likebutton.FacebookLikeBox
             style="@style/Widget.FacebookLikeBox"
             app:calloutMarker="left"
