End of work Day.

--- a/app/src/main/res/layout/adapter_news.xml
+++ b/app/src/main/res/layout/adapter_news.xml
@@ -1,94 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/mainLin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:id="@+id/mainLin">
+    android:orientation="vertical"
+    android:background="@color/md_white_1000">
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:padding="3dp">
 
         <ImageView
+            android:id="@+id/imageViewLogo"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imageViewLogo"
             android:background="@drawable/imagephoto" />
 
         <TextView
+            android:id="@+id/textViewTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="IT English District"
-            android:id="@+id/textViewTitle"
+            android:layout_marginLeft="10dp"
             android:gravity="bottom"
-            android:textColor="@color/color_main"
-            android:layout_marginLeft="10dp" />
+            android:text="IT English District"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/color_main" />
     </TableRow>
 
     <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:id="@+id/imageView4"
-        android:background="@color/color_main"
-        android:layout_marginTop="2dp" />
+        android:layout_marginTop="2dp"
+        android:background="@color/color_main" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="A birthday is just another day where you go to work and people give you love. Age is just a state of mind, and you are as old as you think you are. You have to count your blessings and be happy."
-        android:id="@+id/textViewContent"
-        android:layout_marginLeft="60dp" />
+        android:orientation="vertical"
+        android:padding="5dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Do you want come :"
-        android:id="@+id/textViewQuestion"
-        android:layout_marginTop="5dp"
-        android:textColor="@color/color_main" />
+        <TextView
+            android:id="@+id/textViewContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="5dp"
+            android:text="A birthday is just another day where you go to work and people give you love. Age is just a state of mind, and you are as old as you think you are. You have to count your blessings and be happy." />
 
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:id="@+id/radioGroup">
-
-        <RadioButton
+        <TextView
+            android:id="@+id/textViewQuestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Yes"
-            android:id="@+id/radioButton" />
+            android:layout_marginTop="5dp"
+            android:text="Do you want come :"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/color_main"
+            android:visibility="gone"/>
 
-        <RadioButton
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:visibility="gone">
+
+            <RadioButton
+                android:id="@+id/radioButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yes" />
+
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No" />
+        </RadioGroup>
+
+        <com.db.chart.view.BarChartView
+            android:id="@+id/linechart"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
+
+        <com.shamanland.facebook.likebutton.FacebookLikePlugin
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No"
-            android:id="@+id/radioButton2" />
-    </RadioGroup>
+            android:layout_gravity="right"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-    <com.shamanland.facebook.likebutton.FacebookLikePlugin
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="right"
-        android:layout_marginTop="10dp">
+            <com.shamanland.facebook.likebutton.FacebookLikeButton
+                android:id="@+id/ffbook"
+                style="@style/Widget.FacebookLikeButton"
+                app:pagePicture="@drawable/ic_launcher"
+                app:pageText="This is blog about Android development."
+                app:pageTitle="Developer's notes"
+                app:pageUrl="http://blog.shamanland.com/" />
 
-        <com.shamanland.facebook.likebutton.FacebookLikeButton
-            style="@style/Widget.FacebookLikeButton"
-            app:pageUrl="http://blog.shamanland.com/"
-            app:pageTitle="Developer's notes"
-            app:pageText="This is blog about Android development."
-            app:pagePicture="@drawable/ic_launcher"
-            android:id="@+id/ffbook" />
-        <com.shamanland.facebook.likebutton.FacebookLikeBox
-            style="@style/Widget.FacebookLikeBox"
-            app:calloutMarker="left"
-            />
-    </com.shamanland.facebook.likebutton.FacebookLikePlugin>
+            <com.shamanland.facebook.likebutton.FacebookLikeBox
+                style="@style/Widget.FacebookLikeBox"
+                app:calloutMarker="left" />
+        </com.shamanland.facebook.likebutton.FacebookLikePlugin>
+
+    </LinearLayout>
 </LinearLayout>
