--- a/app/src/main/res/drawable/action_create.xml
+++ b/app/src/main/res/drawable/action_create.xml
@@ -9,4 +9,7 @@
         android:left="4dp"
         android:right="4dp"
         android:top="2dp"/>
+    <stroke
+        android:color="@android:color/darker_gray"
+        android:width="1dp"/>
 </shape>
