--- a/app/src/main/res/drawable/action_create_log_in.xml
+++ b/app/src/main/res/drawable/action_create_log_in.xml
@@ -4,7 +4,7 @@
         android:state_pressed="true">
         <shape>
             <solid
-                android:color="@android:color/secondary_text_light"/>
+                android:color="@android:color/darker_gray"/>
             <corners
                 android:radius="6dp"/>
         </shape>
@@ -13,7 +13,7 @@
     <item>
         <shape>
             <solid
-                android:color="@android:color/darker_gray"/>
+                android:color="#c0c0c0"/>
             <corners
                 android:radius="6dp"/>
         </shape>
