--- a/app/src/main/res/layout/adapter_news.xml
+++ b/app/src/main/res/layout/adapter_news.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/md_white_1000">
+    android:background="@color/md_white_1000"
+    android:weightSum="1">
 
     <TableRow
         android:layout_width="match_parent"
@@ -17,7 +18,8 @@
             android:id="@+id/imageViewLogo"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/imagephoto" />
+            android:background="@drawable/imagephoto"
+            android:src="@drawable/ic_logo_flag"/>
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -62,6 +64,13 @@
             android:visibility="visible"
             android:layout_marginLeft="60dp"
             android:layout_marginBottom="5dp"/>
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="60dp"
+            android:layout_height="1dp"
+            android:background="@color/color_main" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
