--- a/app/src/main/res/layout/startscreen.xml
+++ b/app/src/main/res/layout/startscreen.xml
@@ -1,81 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_hint"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="180dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="50dp"
-        android:visibility="gone" />
+        android:background="@drawable/alb"
+        android:alpha="1"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
         android:gravity="center"
         android:text="IT English District"
-        android:textColor="@color/md_white_1000"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textColor="@android:color/white"
+        android:textSize="30sp"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="290dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="220dp"
         android:orientation="vertical"
-        android:layout_marginBottom="5dp">
+        android:background="@drawable/action_create">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/action_create">
+            android:background="@color/md_white_1000"
+            android:orientation="vertical">
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/editTextLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:hint="Enter your e-mail"
-            android:singleLine="true"
-            android:inputType="textEmailAddress"
-            app:met_baseColor="@color/base_color"
-            app:met_clearButton="true"
-            app:met_floatingLabel="normal"
-            app:met_primaryColor="@color/color_main" />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/editTextLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="E-mail"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+                app:met_baseColor="@color/color_main"
+                app:met_clearButton="true"
+                app:met_floatingLabel="normal" />
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/action_create"
-        android:layout_marginTop="5dp">
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:background="@drawable/action_create"
-            android:id="@+id/editTextPass"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your password"
-            android:inputType="textPassword"
-            android:password="true"
-            android:singleLine="true"
-            app:met_baseColor="@color/base_color"
-            app:met_clearButton="true"
-            app:met_floatingLabel="normal"
-            app:met_primaryColor="@color/color_main" />
+            android:background="@color/md_white_1000"
+            android:orientation="vertical">
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/editTextPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/md_white_1000"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:password="true"
+                android:singleLine="true"
+                app:met_baseColor="@color/md_red_500"
+                app:met_clearButton="true"
+                app:met_floatingLabel="normal" />
 
         </LinearLayout>
 
@@ -85,36 +78,49 @@
         android:id="@+id/textViewSingIn"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_alignLeft="@+id/linearLayout"
+        android:layout_alignRight="@+id/linearLayout"
+        android:layout_below="@+id/linearLayout"
+        android:background="@drawable/action_create_log_in"
         android:gravity="center"
         android:onClick="onSingIn"
         android:text="Log in"
         android:textColor="@color/md_white_1000"
-        android:textSize="16sp"
-        android:background="@drawable/action_create_log_in"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignLeft="@+id/linearLayout"
-        android:layout_alignRight="@+id/linearLayout" />
+        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textViewCreate"
+    <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:gravity="center"
-        android:onClick="onCreateProfile"
-        android:text="Create profile"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="16sp" />
+        android:layout_below="@+id/textViewSingIn"
+        android:layout_marginTop="90dp"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't have an account? "
+            android:id="@+id/textView2"
+            android:textColor="@android:color/white"/>
+
+        <TextView
+            android:id="@+id/textViewCreate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:onClick="onCreateProfile"
+            android:text="Sing up"
+            android:textStyle="bold"
+            android:textColor="@android:color/white" />
+    </TableRow>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Make learning English easier"
-        android:textColor="@color/md_white_1000" />
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
