--- a/app/src/main/res/layout/startscreen.xml
+++ b/app/src/main/res/layout/startscreen.xml
@@ -83,6 +83,7 @@
         android:layout_below="@+id/linearLayout"
         android:background="@drawable/action_create_log_in"
         android:gravity="center"
+        android:clickable="true"
         android:onClick="onSingIn"
         android:text="Log in"
         android:textColor="@color/md_white_1000"
@@ -107,6 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:clickable="true"
             android:onClick="onCreateProfile"
             android:text="Sing up"
             android:textStyle="bold"
