--- a/app/src/main/res/layout/startscreen.xml
+++ b/app/src/main/res/layout/startscreen.xml
@@ -85,7 +85,7 @@
         android:gravity="center"
         android:clickable="true"
         android:onClick="onSingIn"
-        android:text="Log in"
+        android:text="Sing in"
         android:textColor="@color/md_white_1000"
         android:textSize="16sp" />
 
