--- a/app/src/main/res/layout/createprofilescreen.xml
+++ b/app/src/main/res/layout/createprofilescreen.xml
@@ -29,7 +29,29 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp" />
-        />
+        android:layout_marginBottom="130dp" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_join_us"
+            android:id="@+id/buttonJoinUs"
+            android:layout_margin="20dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_sign_in"
+            android:id="@+id/buttonSignIn"
+            android:layout_margin="20dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </RelativeLayout>
