--- a/app/src/main/res/layout/createprofilescreen.xml
+++ b/app/src/main/res/layout/createprofilescreen.xml
@@ -52,6 +52,8 @@
             android:text="@string/btn_sign_in"
             android:id="@+id/buttonSignIn"
             android:layout_margin="20dp"
-            android:layout_weight="1"/>
+            android:background="@color/com_shamanland_facebook_button_blue_normal_end"
+            android:layout_weight="1"
+            android:padding="0dp"/>
     </LinearLayout>
 </RelativeLayout>
