--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -16,6 +16,30 @@
         android:layout_marginBottom="70dp"
         android:background="#92000000" />
 
+    <ImageView
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:id="@+id/ivLogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/logo"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:id="@+id/textView11"
+        android:layout_below="@+id/ivLogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:textColor="@color/md_white_1000"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:shadowColor="@color/md_black_1000"
+        android:shadowRadius="10"
+        android:shadowDx="5"
+        android:shadowDy="10"/>
+
     <Button
         android:layout_width="125dp"
         android:layout_height="45dp"
@@ -240,4 +264,5 @@
         android:text="Log In"
         android:textColor="@android:color/white"
         android:visibility="gone"/>
+
 </RelativeLayout>
