--- a/app/src/main/res/layout/createprofilescreen.xml
+++ b/app/src/main/res/layout/createprofilescreen.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/main_reg">
 
     <include
         layout="@layout/toolbar"
@@ -41,8 +42,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_join_us"
-            android:id="@+id/buttonJoinUs"
+            android:text="@string/btn_join_now"
+            android:id="@+id/buttonJoinNow"
             android:layout_margin="20dp"
             android:layout_weight="1"/>
 
@@ -52,7 +53,6 @@
             android:text="@string/btn_sign_in"
             android:id="@+id/buttonSignIn"
             android:layout_margin="20dp"
-            android:background="@color/com_shamanland_facebook_button_blue_normal_end"
             android:layout_weight="1"
             android:padding="0dp"/>
     </LinearLayout>
