create an event notification

--- a/app/src/main/res/layout/loginscreen.xml
+++ b/app/src/main/res/layout/loginscreen.xml
@@ -222,7 +222,8 @@
         android:layout_below="@+id/instagram_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:onClick="showNotification"/>
 
     <EditText
         android:layout_width="300dp"
